[add] eos alt slot

--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -96,7 +96,11 @@ alternatives:
 
   - - - Remote Sensor Booster II
     - - Remote Sensor Booster II
+    - - Sentient Remote Sensor Booster
+    - - Shadow Serpentis Remote Sensor Booster
     - - Remote Tracking Computer II
+    - - Federation Navy Remote Tracking Computer
+    - - Shadow Serpentis Remote Tracking Computer
 
 from_meta:
   # Automagically determine alternatives
