--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -197,6 +197,9 @@ identification: # Modules/groups we use to look at to figure out what we're flyi
 cargo_ignore: # Cargo modules that do not need to be in the fit to be approved
   - Large Micro Jump Drive
   - Imperial Navy 1600mm Steel Plates
+  - Inertial Stabilizers II
+  - Improved Cloaking Device II
+  - Warp Core Stabilizer II
 
 # Make auto approval amount for drugs different
 # To be used togheter with the alternatives config
