[chg] mod accepted

--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -111,6 +111,8 @@ from_meta:
   - base: Sensor Booster II
   - base: Tracking Computer II
     alternative: Large Micro Jump Drive
+  - base: Drone Link Augmentor I
+  - base: Drone Navigation Computer II
   - base: Supratidal Entropic Disintegrator II
   - base: Imperial Navy Drone Damage Amplifier
   - base: Dark Blood Capacitor Power Relay
@@ -205,6 +207,10 @@ cargo_ignore: # Cargo modules that do not need to be in the fit to be approved
   - Omnidirectional Tracking Link II
   - Standard Mindflood Booster
   - Strong Mindflood Booster
+  - Shadow Serpentis Remote Tracking Computer x3
+  - ECCM Script
+  - Tracking Speed Script
+  - 
 
 # Make auto approval amount for drugs different
 # To be used togheter with the alternatives config
