--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -31,7 +31,7 @@ notes:
   - name: Optimal SCS Nestor
     description: >
       This fit requires the RA-705 Implant & EM-805 Implant.
-  - name: Starter SCS Guardian
+  - name: Standard SCS Guardian
     description: >
       This fit requires the mindflood running if you don't have logistic cruiser V.
   - name: Alt Rattlesnake Other
