--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -207,7 +207,7 @@ cargo_ignore: # Cargo modules that do not need to be in the fit to be approved
   - Omnidirectional Tracking Link II
   - Standard Mindflood Booster
   - Strong Mindflood Booster
-  - Shadow Serpentis Remote Tracking Computer x3
+  - Shadow Serpentis Remote Tracking Computer
   - ECCM Script
   - Tracking Speed Script
 
