--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -9,7 +9,7 @@ notes:
       These **ships** are the only ones you can fly with all **Armor Compensation** skills at level 2, all others require at least 4. If you have omega replace **tracking computer II** with **micro jump drive**.
   - name: Other
     description: >
-      These fits are to be used for alts and never used as main characters in fleet. Only 1 damnation on grid per fleet.
+      These fits are to be used for alts and never used as main characters in fleet. Damnation was removed for a handout eos.
   - name: Optimal
     description: >
       All Optimal DPS ships are required to have the Amulet set 1-6, hardwiring are not required but highly recommended, the Nestor does not require the amulet set.
