[add] marauder change fits

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -12,7 +12,7 @@ notes:
       These fits are to be used for alts and never used as main characters in fleet. Damnation was removed for a handout eos.
   - name: Optimal
     description: >
-      All Optimal DPS ships are required to have the Amulet set 1-6, hardwiring are not required but highly recommended, the Nestor does not require the amulet set.
+      All Optimal DPS ships are required to have the Amulet set 1-6, hardwiring are not required but highly recommended, the Nestor does not require the amulet set. Highly recommended to use 6k+ HP abyssal plate.
   - name: VG
     description: >
       These refits are not mandatory, you can do VG's in the normal fit, but are highly recommended if you regularly do VG sites.
