--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -47,6 +47,12 @@ notes:
   - name: Multibox Loki Other
     description: >
       This fit is only for multibox specialist.
+  - name: Special Struik Paladin fc only
+    description: >
+      This fit requires a 6k HP plate + HG amulet implant set.
+  - name: Special Jakaja Kronos fc only
+    description: >
+      This fit requires 2 6k HP plate + HG amulet implant set.
   - name: Starter SCS Oneiros
     description: >
       This fit requires the RA-704, FC-804, EO-604 Implants.
