--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "react-snowfall": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "styled-components": "^6.1.1",
     "varint": "^6.0.0"
