--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,38 @@
 {
-  "name": "my-waitlist",
-  "version": "0.1.0",
+  "name": "Waitlist-Beancursion",
+  "version": "3.6.0",
+  "description": "Waitlist application for beancursion",
+  "author": "Jakaja Cain",
+  "build": {
+    "appId": "com.electron.Waitlist-Beancursion",
+	"asar": true,
+	"icon": "/public/favicon@1x.ico",
+	"directories": {
+      "buildResources": "public"
+    },
+    "files": [
+      "src/**/*",
+	  "build/**/*",
+      "public/*",
+      "node_modules/**/*",
+      "package.json",
+      "package-lock.json"
+    ],
+    "extraMetadata": {
+      "main": "src/main.js"
+    },
+    "mac": {
+      "category": "public.app-category.entertainment"
+    },
+	"win": {
+      "target": [
+	    "zip"
+      ]
+	}
+  },
   "private": true,
+  "main": "src/main.js",
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -9,6 +40,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-awesome-styled-grid": "^3.1.4",
@@ -25,6 +58,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
     "eslint": "^8.53.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.33.2",
@@ -34,7 +69,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "electron": "electron .",
+	"electron-build": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
