--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -67,4 +67,8 @@ notes:
   - name: Shield Stormbringer Elite
     description: >
       This fit is compatible with elite tank skill level .
+  - name: Special Leshak fc only
+    description: >
+      This fit is under testing. Check with Jakaja. 
+      All dmg mod need to be abyssal with 23% or more dps modifier.
 
