[chg] leshak prep for prd [del] golem

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -67,8 +67,8 @@ notes:
   - name: Shield Stormbringer Elite
     description: >
       This fit is compatible with elite tank skill level .
-  - name: Special Leshak fc only
+  - name: Standard SCS Leshak
     description: >
-      This fit is under testing. Check with Jakaja. 
+      RF-906 is require to fly this ship. 
       All dmg mod need to be abyssal with 23% or more dps modifier.
 
