[add] new api endpoint

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -69,6 +69,6 @@ notes:
       This fit is compatible with elite tank skill level .
   - name: Standard SCS Leshak
     description: >
-      RF-906 is require to fly this ship. 
+      RF-906 is require to fly this ship. Only for alt for now.
       All dmg mod need to be abyssal with 23% or more dps modifier.
 
