[add] fit change

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -52,7 +52,7 @@ notes:
       This fit requires a 6k HP plate + HG amulet implant set.
   - name: Special Jakaja Kronos fc only
     description: >
-      This fit requires 2 6k HP plate + HG amulet implant set.
+      This fit requires 6k HP plate + HG amulet implant set.
   - name: Starter SCS Oneiros
     description: >
       This fit requires the RA-704, FC-804, EO-604 Implants.
